Update comments and names

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Tarjetitas pokemon 1</title>
+  <title>Tarjetitas pokemon</title>
   <style>
     body {
       font-family: Arial, sans-serif;
